new.plone.org/static/plone.css
/* @group Temporary workarounds for stupid HTML in current Plone */

#sub-nav li.navTreeItem div { /* Why is there a stray div in the navtree list item? */
	display: inline !important;
}

/* @end */

/* @group Neutralize! */

/* Remove implicit browser styles to have a neutral starting point:
   - No elements should have implicit margin/padding
   - No underline by default on links (we add it explicitly in the body text)
   - When we want markers on lists, we will be explicit about it, and they render inline by default
   - Browsers are inconsistent about hX/pre/code, reset
   - Linked images should not have borders
   */

* { margin: 0; padding: 0; }
* :link,:visited { text-decoration:none }
* ul,ol { list-style:none; }
* li { display: inline; }
* h1,h2,h3,h4,h5,h6,pre,code { font-size:1em; }
* a img,:link img,:visited img { border:none } 
a { outline: none; }
table { border-spacing: 0; }
img { vertical-align: middle; }
}

/* @end */

/* @group Grid */

/* Grid classes, these can also be nested */
.grid-row {
  float: left;
  width: 100%;
  display: block;
  position: relative;
}
.grid-cell {
  position: relative;
  float: left;
  left: 100%;
}

/* Widths, these are abstracted out so that pixel-based layouts or other
   similar approaches can be retrofitted without changing the markup,
   or if you want to apply rules like the Golden Ratio to your layouts */
.width-half {
	width: 50%;
}
.width-quarter {
	width: 25%;
}
.width-three-quarters {
	width: 75%;
}
.width-third {
	width: 33.33%;
}
.width-two-thirds {
	width: 66.67%;
}

/* Positioning classes, these are subtracting from a rightmost position */
.position-leftmost {
	margin-left: -100%;
}
.position-third {
	margin-left: -66.67%;
}
.position-two-thirds {
	margin-left: -33.33%;
}
.position-quarter {
	margin-left: -75%;
}
.position-half {
	margin-left: -50%;
}
.position-three-quarters {
	margin-left: -25%;
}

/* @end */

/* @group Wrappers */

body { 
	font-family: Arial;
	padding-top: 11px;
}

#main {
	background-color: #329fd7;
}

a:link, a:visited {
	color: #205c90;
}

a:link:hover {
	color: #75ad0a;
}

#outer-wrapper {
	background: left 0px url("images/nav-gradient.png") repeat-x;
	background-color: white;
}
#inner-wrapper {
	border-top: 2px solid white;
	background: url(images/footer-gradient.png) repeat-x;
	background-position: bottom left;
	padding-bottom: 2em;
	clear:both;
}

#content-wrapper {
	width: 937px;
	margin: 0 auto 0 auto;
}

/* @end */

/* @group Navigation/search */

#nav {
/* Should be named header, but conflicts with the accordion.js for now */
	width: 937px;
	margin: 0 auto;
	font-family: "Helvetica Neue", Arial;
}

#main-nav {
	font-size: 14px;
	line-height: 28px;
}

#main-nav li:first-child a {
	/*XXX TODO: mini-logo goes here*/
	/*color: transparent;*/
}

#main-nav li:first-child a {
	border-left: none;
	/*padding-left: 0;*/
}

#sub-nav {
	font-size: 13px;
	line-height: 30px;
	border-top: 1px solid #dcdcdc;
	margin-right: 210px;
}

#sub-nav li a {
	border-right: none;
}

ul.navigation li a,
ul.navigation li a:visited {
	padding: 6px 8px;
	color: Black;
	font-weight: bold;
	border-right: 1px solid #dcdcdc;
	border-left: 1px solid white;
}

ul.navigation li a:hover {
	color: #75ad0a;
}

ul.navigation li.selected a,
ul.navigation li.active a {
	color: #75ad0a;
	padding: 6px 8px 5px 8px;
	border-bottom: 2px solid white;
	border-left: 1px solid white;
}


#search {
	float: right;
	position: relative;
	background: url(images/search-wrapper.png) no-repeat;
	height: 20px;
	padding: 10px 25px;
	margin-top: -2px;
}

#user {
	font-size: 14px;
	width: 145px;
	height: 14px;
	overflow: hidden;
	float: right;
	padding: 5px 4px;
}

#user a {
	color: #666;
	font-weight: bold;
	padding: 2px;
}

#user a:hover {
	background-color: #666;
	color: White;
}

/* @end */

#logo-wrapper {
	width: 937px;
	margin: 0 auto;
}

#logo {
	margin: 25px 22px;
}


/* @group Splash pages */

div.splash {
	font-family: "Helvetica Neue", Arial, sans-serif;
	background-color: #205c90;
	color: White;
	min-height: 196px;

	border-radius: 0.5em;
	-webkit-border-radius: 0.5em;
	-moz-border-radius: 0.5em;
}

div.splash h1 {
	padding: 1em 0.5em 0 260px !important;
	font-weight: bold;
	font-size: 26px;
	line-height: 32px;
	letter-spacing: -1px;

}

div.splash h2 {
	padding: 0 0 0 387px;
	font-weight: bold;
	font-size: 22px;
	line-height: 28px;
	letter-spacing: -1px;
}

div.splash p {
	padding: 20px 0 0 260px;
	font-size: 12px;
	font-weight: bold;
}

div.splash a {
	color: White;
	float: right;
	line-height: 16px;
	margin-right: 32px;
	padding-right: 16px;
	background: right top url(images/arrow-white.png) no-repeat;
	display: block;
}

div.pullout {
	background-color: #87B829;
	color: White;
	min-height: 172px;
	padding: 1.5em 15px 0 3em;
	margin-bottom: 24px;
	margin-left: -1em;

	border-radius: 0.5em;
	-webkit-border-radius: 0.5em;
	-moz-border-radius: 0.5em;
}

div.pullout h2 {
	font-size: 24px;
	margin-bottom: 0.5em;
}

div.pullout p,
div.pullout ul,
div.pullout ol {
	font-size: 12px;
	margin-bottom: 1em;
}

div.pullout li {
	display: block;
}

div.pullout a {
	color: White;
}

div.pullout li a:before {
	content: "→ ";
}

/*TODO: #sidebar & .sidebar need to be consolidated*/
#sidebar {
	padding-top: 2em;
}

div.sidebar {
	padding-top: 0.5em;
	margin-left: 1em;
}


div.sidebar ul li a {
	line-height: 36px;
	font-size: 18px;
	display: block;
	border-top: 1px solid #eee;
	font-weight: bold;
	background: left 9px url(images/arrow-blue.png) no-repeat;
	padding-left: 16px;
	letter-spacing: -1px;
}

div.sidebar ol li {
	line-height: 18px;
	font-size: 11px;
	display: block;
	border-top: 1px solid #eee;
	margin-bottom: 0.5em;
	padding-top: 0.5em;
	clear: both;
}

div.sidebar ol li a {
	font-weight: bold;
	display: block;
}

img.book-cover {
	float: left;
	display: block;
	padding: 2px;
	border: 1px solid #ddd;
	margin: 5px 15px 10px 0;
}
/* ... */

